--- a/style.css
+++ b/style.css
@@ -268,9 +268,10 @@ h3 { font-size: 1.8em; }
     border-color: var(--color-primary);
 }
 
-.document-link img {
-    width: 50px;
-    height: 50px;
+.document-grid .document-link img {
+    width: 50px !important;
+    height: 50px !important;
+    object-fit: contain;
     margin-bottom: 10px;
     /* Placeholder for icons */
     content: url('[PLACEHOLDER_ICON_PDF]'); 
@@ -317,6 +318,7 @@ footer h2 {
     }
 
 }
+
 
 
 
