--- a/style.css
+++ b/style.css
@@ -206,8 +206,10 @@ h3 { font-size: 1.8em; }
     flex: 1 1 200px; /* Allows up to 5 items on one large row */
     text-align: center;
     background-color: #252a33;
-    padding: 10px;
+    padding: 0px;
+    margin: 0px;
     border-radius: 5px;
+    overflow: hidden;
 }
 
 .component-gallery img {
@@ -215,8 +217,8 @@ h3 { font-size: 1.8em; }
     height: 120px;
     max-width: 150px;
     display: block;
-    margin: 0 auto 10px auto;
-    border: 1px solid var(--color-primary);
+    margin: 0;
+    border: none
 
     object-fit: cover;
     object-position: center;
@@ -321,6 +323,7 @@ footer h2 {
     }
 
 }
+
 
 
 
